demos/ingress-nginx/ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/apple"
        backend:
          service: 
            name: apple-service
            port: 
              number: 5678
      - pathType: Prefix
        path: "/banana"
        backend:
          service:
            name: banana-service
            port: 
              number: 5678
